# RegEngine

./: .gitignore  CMakeLists.txt  README.md  build.bat  main.cpp
TestDemo/: CMakeLists.txt
TestDemo/Demo1/: Demo.cpp
TestDemo/Demo1/include/: Demo.hpp
include/: Demo.hpp  InputHandler.hpp  RLog.hpp  RObject.hpp  RObjectBase.hpp  RPrerequisites.h  RVector.hpp  RVector2.hpp  RegCoreGlobal.hpp  RegEngine.hpp  RegStatic.hpp
src/: CMakeLists.txt  Demo.cpp  InputHandler.cpp  RObject.cpp  RObjectBase.cpp  RegCoreGlobal.cpp  RegEngine.cpp  RegStatic.cpp  main.cpp
src/Core/: InputHandler.cpp  RObject.cpp  RObjectBase.cpp  RegCoreGlobal.cpp  RegEngine.cpp
src/Core/Private/: InputHandler.cpp  RObject.cpp  RegCoreGlobal.cpp  RegEngine.cpp  RegStatic.cpp
src/Core/Public/: RObject.hpp  RegEngine.hpp  RegStatic.hpp
src/Math/: RVector.cpp  RVector2.cpp
src/Utilitys/: RLog.cpp
