#静态库源文件
AUX_SOURCE_DIRECTORY(. DIR_STATIC_SRCS)
AUX_SOURCE_DIRECTORY(./Core DIR_STATIC_SRCS)
AUX_SOURCE_DIRECTORY(./Math DIR_STATIC_SRCS)
AUX_SOURCE_DIRECTORY(./Utilitys DIR_STATIC_SRCS)


SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)           #设置库文件的输出目录

ADD_LIBRARY (RegEngineLib STATIC ${DIR_STATIC_SRCS})

